gccida/c0/insert_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_regs/src/cse.c:1761:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_regs/src/cse.c:1763:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( regno); 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_regs/src/cse.c:1810:24: error: use of undeclared identifier 'machine_mode'
make_new_qty( regno, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_regs/src/cse.c:1810:39: error: expected expression
make_new_qty( regno, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert_regs/src/obj/cse.o] Error 1
